--- a/blogPlatform/src/main/resources/application.properties
+++ b/blogPlatform/src/main/resources/application.properties
@@ -9,9 +9,15 @@ spring.mvc.view.suffix=.jsp
 
 
 # DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/blog_platform
-spring.datasource.username=prakash
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://autorack.proxy.rlwy.net:34291/railway
+spring.datasource.username=root
+spring.datasource.password=KRipUBkVCsmocuuUTZWROCLecFOlfHZh
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+#spring.datasource.url=mysql://root:KRipUBkVCsmocuuUTZWROCLecFOlfHZh@autorack.proxy.rlwy.net:34291/railway
+#spring.datasource.username=prakash
+#spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
